grammar.txt
RESULT  ::= Expr$

Expr    ::= MulDiv{[+-]MulDiv}*
MulDiv  ::= Primary{[*/]Primary}*
Primary ::= '(' Expr ')' | Var | Number
Var     ::= ['a'-'z' _] {['a'-'z' '0'-'9' _]}*
Number  ::= ['0'-'9']+

https://bnfplayground.pauliankline.com/?bnf=%3CRESULT%3E%20%20%3A%3A%3D%20%3CSumSub%3E%0A%0A%3CExpr%3E%20%20%20%20%3A%3A%3D%20%3CMulDiv%3E%20%20((%22%2B%22%20%7C%20%22-%22)%20%3CMulDiv%3E)*%0A%3CMulDiv%3E%20%20%3A%3A%3D%20%3CPrimary%3E%20((%22%2B%22%20%7C%20%22-%22)%20%3CPrimary%3E%7D*%0A%3CPrimary%3E%20%3A%3A%3D%20%22(%22%20%3CExpr%3E%20%22)%22%20%7C%20%3CNumber%3E%0A%3CNumber%3E%20%20%3A%3A%3D%20%5B%270%27-%279%27%5D%2B%0A&name=
